--- a/kdr_provider_op.html
+++ b/kdr_provider_op.html
@@ -65,23 +65,23 @@ ul.task-list li input[type="checkbox"] {
 <!-- #### ACKERMAN MD, ROBERT S (NPI: 1598290868) -->
 <div class="cell">
 <div class="cell-output-display">
-<div id="uamhfbkfmm" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#uamhfbkfmm table {
+<div id="itfbivcgbr" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#itfbivcgbr table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#uamhfbkfmm thead, #uamhfbkfmm tbody, #uamhfbkfmm tfoot, #uamhfbkfmm tr, #uamhfbkfmm td, #uamhfbkfmm th {
+#itfbivcgbr thead, #itfbivcgbr tbody, #itfbivcgbr tfoot, #itfbivcgbr tr, #itfbivcgbr td, #itfbivcgbr th {
   border-style: none;
 }
 
-#uamhfbkfmm p {
+#itfbivcgbr p {
   margin: 0;
   padding: 0;
 }
 
-#uamhfbkfmm .gt_table {
+#itfbivcgbr .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -107,12 +107,12 @@ ul.task-list li input[type="checkbox"] {
   border-left-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_caption {
+#itfbivcgbr .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#uamhfbkfmm .gt_title {
+#itfbivcgbr .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -124,7 +124,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-width: 0;
 }
 
-#uamhfbkfmm .gt_subtitle {
+#itfbivcgbr .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -136,7 +136,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-width: 0;
 }
 
-#uamhfbkfmm .gt_heading {
+#itfbivcgbr .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -148,13 +148,13 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_bottom_border {
+#itfbivcgbr .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_col_headings {
+#itfbivcgbr .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -169,7 +169,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_col_heading {
+#itfbivcgbr .gt_col_heading {
   color: #FFFFFF;
   background-color: #104E8B;
   font-size: 100%;
@@ -189,7 +189,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#uamhfbkfmm .gt_column_spanner_outer {
+#itfbivcgbr .gt_column_spanner_outer {
   color: #FFFFFF;
   background-color: #104E8B;
   font-size: 100%;
@@ -201,15 +201,15 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 4px;
 }
 
-#uamhfbkfmm .gt_column_spanner_outer:first-child {
+#itfbivcgbr .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#uamhfbkfmm .gt_column_spanner_outer:last-child {
+#itfbivcgbr .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#uamhfbkfmm .gt_column_spanner {
+#itfbivcgbr .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -221,11 +221,11 @@ ul.task-list li input[type="checkbox"] {
   width: 100%;
 }
 
-#uamhfbkfmm .gt_spanner_row {
+#itfbivcgbr .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#uamhfbkfmm .gt_group_heading {
+#itfbivcgbr .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -251,7 +251,7 @@ ul.task-list li input[type="checkbox"] {
   text-align: left;
 }
 
-#uamhfbkfmm .gt_empty_group_heading {
+#itfbivcgbr .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -266,15 +266,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: middle;
 }
 
-#uamhfbkfmm .gt_from_md > :first-child {
+#itfbivcgbr .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#uamhfbkfmm .gt_from_md > :last-child {
+#itfbivcgbr .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#uamhfbkfmm .gt_row {
+#itfbivcgbr .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -293,7 +293,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#uamhfbkfmm .gt_stub {
+#itfbivcgbr .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -306,7 +306,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#uamhfbkfmm .gt_stub_row_group {
+#itfbivcgbr .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -320,15 +320,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: top;
 }
 
-#uamhfbkfmm .gt_row_group_first td {
+#itfbivcgbr .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#uamhfbkfmm .gt_row_group_first th {
+#itfbivcgbr .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#uamhfbkfmm .gt_summary_row {
+#itfbivcgbr .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -338,16 +338,16 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#uamhfbkfmm .gt_first_summary_row {
+#itfbivcgbr .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_first_summary_row.thick {
+#itfbivcgbr .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#uamhfbkfmm .gt_last_summary_row {
+#itfbivcgbr .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -357,7 +357,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_grand_summary_row {
+#itfbivcgbr .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -367,7 +367,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#uamhfbkfmm .gt_first_grand_summary_row {
+#itfbivcgbr .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -377,7 +377,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_last_grand_summary_row_top {
+#itfbivcgbr .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -387,11 +387,11 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_striped {
+#itfbivcgbr .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#uamhfbkfmm .gt_table_body {
+#itfbivcgbr .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -400,7 +400,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_footnotes {
+#itfbivcgbr .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -414,7 +414,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_footnote {
+#itfbivcgbr .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -423,7 +423,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#uamhfbkfmm .gt_sourcenotes {
+#itfbivcgbr .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -437,7 +437,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#uamhfbkfmm .gt_sourcenote {
+#itfbivcgbr .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -445,72 +445,72 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#uamhfbkfmm .gt_left {
+#itfbivcgbr .gt_left {
   text-align: left;
 }
 
-#uamhfbkfmm .gt_center {
+#itfbivcgbr .gt_center {
   text-align: center;
 }
 
-#uamhfbkfmm .gt_right {
+#itfbivcgbr .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#uamhfbkfmm .gt_font_normal {
+#itfbivcgbr .gt_font_normal {
   font-weight: normal;
 }
 
-#uamhfbkfmm .gt_font_bold {
+#itfbivcgbr .gt_font_bold {
   font-weight: bold;
 }
 
-#uamhfbkfmm .gt_font_italic {
+#itfbivcgbr .gt_font_italic {
   font-style: italic;
 }
 
-#uamhfbkfmm .gt_super {
+#itfbivcgbr .gt_super {
   font-size: 65%;
 }
 
-#uamhfbkfmm .gt_footnote_marks {
+#itfbivcgbr .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#uamhfbkfmm .gt_asterisk {
+#itfbivcgbr .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#uamhfbkfmm .gt_indent_1 {
+#itfbivcgbr .gt_indent_1 {
   text-indent: 5px;
 }
 
-#uamhfbkfmm .gt_indent_2 {
+#itfbivcgbr .gt_indent_2 {
   text-indent: 10px;
 }
 
-#uamhfbkfmm .gt_indent_3 {
+#itfbivcgbr .gt_indent_3 {
   text-indent: 15px;
 }
 
-#uamhfbkfmm .gt_indent_4 {
+#itfbivcgbr .gt_indent_4 {
   text-indent: 20px;
 }
 
-#uamhfbkfmm .gt_indent_5 {
+#itfbivcgbr .gt_indent_5 {
   text-indent: 25px;
 }
 
-#uamhfbkfmm .katex-display {
+#itfbivcgbr .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#uamhfbkfmm div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#itfbivcgbr div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
@@ -625,12 +625,11 @@ ul.task-list li input[type="checkbox"] {
 <p><strong>Notes:</strong></p>
 <ul>
 <li><p>This summarizes the results of <strong><em>28</em></strong> surveys received between <strong><em>2024-02-01</em></strong> and <strong><em>2024-10-31</em></strong>.</p></li>
-<li><p>The sample count of <strong><em>28</em></strong> surveys fails to fulfill the minimum sample size requirements.</p></li>
-<li><p>The percentile rank is an internal rank that compares all physicians within the service line. For example, a percentile rank of 90 means the score is in the top 10 percent of all physicians.</p></li>
-<li><p>The correlation measures the strength of the linear association between the response to the institutional measure and the question of interest.</p></li>
-<li><p>The top box ratio calculates the likelihood of giving the top box score for the institutional measure, given the score is a top box for the question of interest.</p></li>
-<li><p>The driver index sorts the combined correlation and top box ratio scores.</p></li>
-<li><p>The priority order is determined by combining the driver index and the percentile rank.</p></li>
+<li><p>The <u>percentile rank</u> is an internal rank that compares all physicians within the service line. For example, a percentile rank of 90 means the score is in the top 10 percent of all physicians.</p></li>
+<li><p>The <u>correlation</u> measures the strength of the linear association between the response to the institutional measure and the question of interest. The 28 surveys analyzed <strong>is less than</strong> the minimum number of surveys (30) required to come to a <strong>statistically sound</strong> conclusion regarding the correlation.</p></li>
+<li><p>The <u>top box ratio</u> calculates the likelihood of giving the top box score for the institutional measure, given the score is a top box for the question of interest.</p></li>
+<li><p>The <u>driver index</u> sorts the combined correlation and top box ratio scores.</p></li>
+<li><p>The <u>priority order</u> is determined by combining the driver index and the percentile rank.</p></li>
 </ul>
 
 </main>
