--- a/kdr_provider_op.html
+++ b/kdr_provider_op.html
@@ -72,23 +72,23 @@ ul.task-list li input[type="checkbox"] {
 </center>
 <div class="cell">
 <div class="cell-output-display">
-<div id="kqhfusazpm" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
-<style>#kqhfusazpm table {
+<div id="ckdcdlnwbc" style="padding-left:0px;padding-right:0px;padding-top:10px;padding-bottom:10px;overflow-x:auto;overflow-y:auto;width:auto;height:auto;">
+<style>#ckdcdlnwbc table {
   font-family: system-ui, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-#kqhfusazpm thead, #kqhfusazpm tbody, #kqhfusazpm tfoot, #kqhfusazpm tr, #kqhfusazpm td, #kqhfusazpm th {
+#ckdcdlnwbc thead, #ckdcdlnwbc tbody, #ckdcdlnwbc tfoot, #ckdcdlnwbc tr, #ckdcdlnwbc td, #ckdcdlnwbc th {
   border-style: none;
 }
 
-#kqhfusazpm p {
+#ckdcdlnwbc p {
   margin: 0;
   padding: 0;
 }
 
-#kqhfusazpm .gt_table {
+#ckdcdlnwbc .gt_table {
   display: table;
   border-collapse: collapse;
   line-height: normal;
@@ -114,12 +114,12 @@ ul.task-list li input[type="checkbox"] {
   border-left-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_caption {
+#ckdcdlnwbc .gt_caption {
   padding-top: 4px;
   padding-bottom: 4px;
 }
 
-#kqhfusazpm .gt_title {
+#ckdcdlnwbc .gt_title {
   color: #333333;
   font-size: 125%;
   font-weight: initial;
@@ -131,7 +131,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-width: 0;
 }
 
-#kqhfusazpm .gt_subtitle {
+#ckdcdlnwbc .gt_subtitle {
   color: #333333;
   font-size: 85%;
   font-weight: initial;
@@ -143,7 +143,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-width: 0;
 }
 
-#kqhfusazpm .gt_heading {
+#ckdcdlnwbc .gt_heading {
   background-color: #FFFFFF;
   text-align: center;
   border-bottom-color: #FFFFFF;
@@ -155,13 +155,13 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_bottom_border {
+#ckdcdlnwbc .gt_bottom_border {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_col_headings {
+#ckdcdlnwbc .gt_col_headings {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -176,7 +176,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_col_heading {
+#ckdcdlnwbc .gt_col_heading {
   color: #333333;
   background-color: #A4DBE8;
   font-size: 15px;
@@ -196,7 +196,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#kqhfusazpm .gt_column_spanner_outer {
+#ckdcdlnwbc .gt_column_spanner_outer {
   color: #333333;
   background-color: #A4DBE8;
   font-size: 15px;
@@ -208,15 +208,15 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 4px;
 }
 
-#kqhfusazpm .gt_column_spanner_outer:first-child {
+#ckdcdlnwbc .gt_column_spanner_outer:first-child {
   padding-left: 0;
 }
 
-#kqhfusazpm .gt_column_spanner_outer:last-child {
+#ckdcdlnwbc .gt_column_spanner_outer:last-child {
   padding-right: 0;
 }
 
-#kqhfusazpm .gt_column_spanner {
+#ckdcdlnwbc .gt_column_spanner {
   border-bottom-style: solid;
   border-bottom-width: 2px;
   border-bottom-color: #D3D3D3;
@@ -228,11 +228,11 @@ ul.task-list li input[type="checkbox"] {
   width: 100%;
 }
 
-#kqhfusazpm .gt_spanner_row {
+#ckdcdlnwbc .gt_spanner_row {
   border-bottom-style: hidden;
 }
 
-#kqhfusazpm .gt_group_heading {
+#ckdcdlnwbc .gt_group_heading {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -258,7 +258,7 @@ ul.task-list li input[type="checkbox"] {
   text-align: left;
 }
 
-#kqhfusazpm .gt_empty_group_heading {
+#ckdcdlnwbc .gt_empty_group_heading {
   padding: 0.5px;
   color: #333333;
   background-color: #FFFFFF;
@@ -273,15 +273,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: middle;
 }
 
-#kqhfusazpm .gt_from_md > :first-child {
+#ckdcdlnwbc .gt_from_md > :first-child {
   margin-top: 0;
 }
 
-#kqhfusazpm .gt_from_md > :last-child {
+#ckdcdlnwbc .gt_from_md > :last-child {
   margin-bottom: 0;
 }
 
-#kqhfusazpm .gt_row {
+#ckdcdlnwbc .gt_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -300,7 +300,7 @@ ul.task-list li input[type="checkbox"] {
   overflow-x: hidden;
 }
 
-#kqhfusazpm .gt_stub {
+#ckdcdlnwbc .gt_stub {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -313,7 +313,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kqhfusazpm .gt_stub_row_group {
+#ckdcdlnwbc .gt_stub_row_group {
   color: #333333;
   background-color: #FFFFFF;
   font-size: 100%;
@@ -327,15 +327,15 @@ ul.task-list li input[type="checkbox"] {
   vertical-align: top;
 }
 
-#kqhfusazpm .gt_row_group_first td {
+#ckdcdlnwbc .gt_row_group_first td {
   border-top-width: 2px;
 }
 
-#kqhfusazpm .gt_row_group_first th {
+#ckdcdlnwbc .gt_row_group_first th {
   border-top-width: 2px;
 }
 
-#kqhfusazpm .gt_summary_row {
+#ckdcdlnwbc .gt_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -345,16 +345,16 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kqhfusazpm .gt_first_summary_row {
+#ckdcdlnwbc .gt_first_summary_row {
   border-top-style: solid;
   border-top-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_first_summary_row.thick {
+#ckdcdlnwbc .gt_first_summary_row.thick {
   border-top-width: 2px;
 }
 
-#kqhfusazpm .gt_last_summary_row {
+#ckdcdlnwbc .gt_last_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -364,7 +364,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_grand_summary_row {
+#ckdcdlnwbc .gt_grand_summary_row {
   color: #333333;
   background-color: #FFFFFF;
   text-transform: inherit;
@@ -374,7 +374,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kqhfusazpm .gt_first_grand_summary_row {
+#ckdcdlnwbc .gt_first_grand_summary_row {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -384,7 +384,7 @@ ul.task-list li input[type="checkbox"] {
   border-top-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_last_grand_summary_row_top {
+#ckdcdlnwbc .gt_last_grand_summary_row_top {
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 5px;
@@ -394,11 +394,11 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_striped {
+#ckdcdlnwbc .gt_striped {
   background-color: rgba(128, 128, 128, 0.05);
 }
 
-#kqhfusazpm .gt_table_body {
+#ckdcdlnwbc .gt_table_body {
   border-top-style: solid;
   border-top-width: 2px;
   border-top-color: #D3D3D3;
@@ -407,7 +407,7 @@ ul.task-list li input[type="checkbox"] {
   border-bottom-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_footnotes {
+#ckdcdlnwbc .gt_footnotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -421,7 +421,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_footnote {
+#ckdcdlnwbc .gt_footnote {
   margin: 0px;
   font-size: 90%;
   padding-top: 4px;
@@ -430,7 +430,7 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kqhfusazpm .gt_sourcenotes {
+#ckdcdlnwbc .gt_sourcenotes {
   color: #333333;
   background-color: #FFFFFF;
   border-bottom-style: none;
@@ -444,7 +444,7 @@ ul.task-list li input[type="checkbox"] {
   border-right-color: #D3D3D3;
 }
 
-#kqhfusazpm .gt_sourcenote {
+#ckdcdlnwbc .gt_sourcenote {
   font-size: 90%;
   padding-top: 4px;
   padding-bottom: 4px;
@@ -452,72 +452,72 @@ ul.task-list li input[type="checkbox"] {
   padding-right: 5px;
 }
 
-#kqhfusazpm .gt_left {
+#ckdcdlnwbc .gt_left {
   text-align: left;
 }
 
-#kqhfusazpm .gt_center {
+#ckdcdlnwbc .gt_center {
   text-align: center;
 }
 
-#kqhfusazpm .gt_right {
+#ckdcdlnwbc .gt_right {
   text-align: right;
   font-variant-numeric: tabular-nums;
 }
 
-#kqhfusazpm .gt_font_normal {
+#ckdcdlnwbc .gt_font_normal {
   font-weight: normal;
 }
 
-#kqhfusazpm .gt_font_bold {
+#ckdcdlnwbc .gt_font_bold {
   font-weight: bold;
 }
 
-#kqhfusazpm .gt_font_italic {
+#ckdcdlnwbc .gt_font_italic {
   font-style: italic;
 }
 
-#kqhfusazpm .gt_super {
+#ckdcdlnwbc .gt_super {
   font-size: 65%;
 }
 
-#kqhfusazpm .gt_footnote_marks {
+#ckdcdlnwbc .gt_footnote_marks {
   font-size: 75%;
   vertical-align: 0.4em;
   position: initial;
 }
 
-#kqhfusazpm .gt_asterisk {
+#ckdcdlnwbc .gt_asterisk {
   font-size: 100%;
   vertical-align: 0;
 }
 
-#kqhfusazpm .gt_indent_1 {
+#ckdcdlnwbc .gt_indent_1 {
   text-indent: 5px;
 }
 
-#kqhfusazpm .gt_indent_2 {
+#ckdcdlnwbc .gt_indent_2 {
   text-indent: 10px;
 }
 
-#kqhfusazpm .gt_indent_3 {
+#ckdcdlnwbc .gt_indent_3 {
   text-indent: 15px;
 }
 
-#kqhfusazpm .gt_indent_4 {
+#ckdcdlnwbc .gt_indent_4 {
   text-indent: 20px;
 }
 
-#kqhfusazpm .gt_indent_5 {
+#ckdcdlnwbc .gt_indent_5 {
   text-indent: 25px;
 }
 
-#kqhfusazpm .katex-display {
+#ckdcdlnwbc .katex-display {
   display: inline-flex !important;
   margin-bottom: 0.75em !important;
 }
 
-#kqhfusazpm div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
+#ckdcdlnwbc div.Reactable > div.rt-table > div.rt-thead > div.rt-tr.rt-tr-group-header > div.rt-th-group:after {
   height: 0px !important;
 }
 </style>
@@ -540,7 +540,7 @@ ul.task-list li input[type="checkbox"] {
 <td class="gt_row gt_center" headers="Linear Correlation"></td>
 <td class="gt_row gt_center" headers="Top-Box Ratio"></td>
 <td class="gt_row gt_center" headers="Driver Index"></td>
-<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">75 ( 1 )</td>
+<td class="gt_row gt_center" headers="Top-Box Score (Percentile Rank)">85.7 ( 10 )</td>
 </tr>
 </tbody>
 </table>
@@ -551,9 +551,9 @@ ul.task-list li input[type="checkbox"] {
 <div style="page-break-after: always;"></div>
 <p><strong>Notes:</strong></p>
 <ul>
-<li><p>The data was collected from <strong><em>4</em></strong> &nbsp;surveys received from <strong><em>2024-02-01</em></strong> to <strong><em>2024-10-31</em></strong>.</p></li>
+<li><p>The data was collected from <strong><em>7</em></strong> &nbsp;surveys received from <strong><em>2024-07-01</em></strong> to <strong><em>2024-12-31</em></strong>.</p></li>
 <li><p>The <u>percentile rank</u> is an internal rank that compares all physicians within the service line. It is calculated by counting the number of scores less than the physician’s top box score (x) and dividing by the number of top box scores (n). A percentile rank of 90 means the score is better than 90% of all physicians’ scores within Moffitt.</p></li>
-<li><p>The <u>correlation</u> measures the strength of the linear association between the response to the Physician Incentive measure and the question of interest. The 4 surveys analyzed <strong>is less than</strong> the minimum number of surveys (30) required to come to a <strong>statistically sound</strong> conclusion regarding the correlation.</p></li>
+<li><p>The <u>correlation</u> measures the strength of the linear association between the response to the Physician Incentive measure and the question of interest. The 7 surveys analyzed <strong>is less than</strong> the minimum number of surveys (30) required to come to a <strong>statistically sound</strong> conclusion regarding the correlation.</p></li>
 <li><p>The <u>top box ratio</u> calculates the likelihood of giving the top box score for the Physician Incentive measure, given the score is a top box for the question of interest.</p></li>
 <li><p>The <u>driver index</u> sorts the combined correlation and top box ratio scores.</p></li>
 <li><p>The <u>priority order</u> is determined by combining the driver index and the percentile rank.</p></li>
